[tool.poetry]
name = "smartie"
version = "1.0.3"
description = "A pure-python S.M.A.R.T library."
authors = ["Tyler Kennedy <tk@tkte.ch>"]
license = "MIT"
readme = "README.md"
keywords = ["sensors", "smart", "hardware", "monitor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/TkTech/smartie/issues"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
Sphinx = "^6.1.3"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
