[tool.poetry]
name = "smartie"
version = "2.1.2"
description = "A pure-python S.M.A.R.T library."
authors = ["Tyler Kennedy <tk@tkte.ch>"]
license = "MIT"
readme = "README.md"
keywords = ["sensors", "smart", "hardware", "monitor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/TkTech/smartie/issues"

[tool.poetry.dependencies]
python = "^3.8"
click = {version = "^8.1.3", optional = true}
rich = {version = "^13.3.3", optional = true}

[tool.poetry.extras]
cli = ["click", "rich"]

[tool.poetry.scripts]
smartie = "smartie.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
Sphinx = "^6.1.3"
bump2version = "^1.0.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ['py38']